Hacking at sony amp support

--- a/homeassistant/components/sonyamp/translations/en.json
+++ b/homeassistant/components/sonyamp/translations/en.json
@@ -1,22 +1,19 @@
 {
-    "config": {
-        "abort": {
-            "already_configured": "[%key:common::config_flow::abort::already_configured_device%]"
-        },
-        "error": {
-            "cannot_connect": "[%key:common::config_flow::error::cannot_connect%]",
-            "invalid_auth": "[%key:common::config_flow::error::invalid_auth%]",
-            "unknown": "[%key:common::config_flow::error::unknown%]"
-        },
-        "step": {
-            "user": {
-                "data": {
-                    "host": "[%key:common::config_flow::data::host%]",
-                    "password": "[%key:common::config_flow::data::password%]",
-                    "username": "[%key:common::config_flow::data::username%]"
-                }
-            }
+  "config": {
+    "step": {
+      "user": {
+        "title": "Sony AV reciever",
+        "description": "Device information",
+        "data": {
+          "name":     "Device name",
+          "filename": "Serial port",
+		  "zones":    "Number of zones"
         }
+      }
     },
-    "title": "sonyamp"
+    "error": {
+      "no_dev_found": "Device not found",
+      "unknown":      "An unknown error occured"
+    }
+  }
 }
